--- a/code/SML_Project.ipynb
+++ b/code/SML_Project.ipynb
@@ -170,7 +170,17 @@
    "id": "6aa32b1f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open('../data/processed_data/data_processed_pca_hard_ham.pkl', 'rb') as f:\n",
+    "    data_reload_hard_ham_pca = pickle.load(f)\n",
+    "\n",
+    "X_train_hard_ham_pca = data_reload_hard_ham_pca['X_train']\n",
+    "X_test_hard_ham_pca  = data_reload_hard_ham_pca['X_test']\n",
+    "X_val_hard_ham_pca   = data_reload_hard_ham_pca['X_val']\n",
+    "y_train_hard_ham_pca = data_reload_hard_ham_pca['y_train']\n",
+    "y_test_hard_ham_pca  = data_reload_hard_ham_pca['y_test']\n",
+    "y_val_hard_ham_pca   = data_reload_hard_ham_pca['y_val']"
+   ]
   },
   {
    "cell_type": "code",
@@ -314,6 +324,9 @@
     "print(\"==================================\")\n",
     "print(\"SVC: PCA processed dataset:\")\n",
     "workflow(SVC(), param_dist_svc, X_train_pca, y_train_pca, X_val_pca, y_val_pca, X_test_pca, y_test_pca)\n",
+    "print(\"==================================\")\n",
+    "print(\"SVC: PCA processed hard ham dataset:\")\n",
+    "workflow(SVC(), param_dist_svc, X_train_hard_ham_pca, y_train_hard_ham_pca, X_val_hard_ham_pca, y_val_hard_ham_pca, X_test_hard_ham_pca, y_test_hard_ham_pca)\n",
     "\n",
     "# Random Forest\n",
     "param_dist_rf = {\n",
@@ -340,6 +353,9 @@
     "print(\"==================================\")\n",
     "print(\"Random Forest: PCA processed dataset:\")\n",
     "workflow(RandomForestClassifier(n_estimators=100, random_state=42), param_dist_rf, X_train_pca, y_train_pca, X_val_pca, y_val_pca, X_test_pca, y_test_pca)\n",
+    "print(\"==================================\")\n",
+    "print(\"Random Forest: PCA processed hard ham dataset:\")\n",
+    "workflow(RandomForestClassifier(n_estimators=100, random_state=42), param_dist_rf, X_train_hard_ham_pca, y_train_hard_ham_pca, X_val_hard_ham_pca, y_val_hard_ham_pca, X_test_hard_ham_pca, y_test_hard_ham_pca)\n",
     "\n",
     "# Overfitting analysis"
    ]
