--- a/code/SML_Project.ipynb
+++ b/code/SML_Project.ipynb
@@ -92,7 +92,10 @@
     "import time\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.model_selection import RandomizedSearchCV\n",
-    "from scipy.stats import randint"
+    "from scipy.stats import randint\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score, roc_curve, confusion_matrix\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns"
    ]
   },
   {
@@ -316,7 +319,51 @@
     "    # Predict\n",
     "    y_pred = best_model.predict(X_test)\n",
     "    test_accuracy = accuracy_score(y_test, y_pred)\n",
+    "    roc_auc = roc_auc_score(y_test, y_pred)\n",
+    "    precision = precision_score(y_test, y_pred, average='macro')\n",
+    "    recall = recall_score(y_test, y_pred, average='macro')\n",
+    "    f1 = f1_score(y_test, y_pred, average='macro')\n",
+    "\n",
     "    print(\"Test Accuracy:\", test_accuracy)\n",
+    "    print(\"Test Precision:\", precision)\n",
+    "    print(\"Test Recall:\", recall)\n",
+    "    print(\"Test F1-score:\", f1)\n",
+    "    print(\"Test ROC AUC:\", roc_auc)\n",
+    "\n",
+    "    # Get predicted probabilities for the positive class\n",
+    "    y_probabilities = best_model.predict_proba(X_test)[:, 1]\n",
+    "\n",
+    "    # Compute ROC curve\n",
+    "    fpr, tpr, thresholds = roc_curve(y_test, y_probabilities)\n",
+    "\n",
+    "    # Compute ROC AUC score\n",
+    "    roc_auc = roc_auc_score(y_test, y_probabilities)\n",
+    "    print(\"Test ROC AUC:\", roc_auc)\n",
+    "\n",
+    "    # Plot ROC curve\n",
+    "    plt.figure(figsize=(8, 6))\n",
+    "    plt.plot(fpr, tpr, color='blue', lw=2, label='ROC curve (area = %0.2f)' % roc_auc)\n",
+    "    plt.plot([0, 1], [0, 1], color='gray', lw=1, linestyle='--')\n",
+    "    plt.xlim([0.0, 1.0])\n",
+    "    plt.ylim([0.0, 1.05])\n",
+    "    plt.xlabel('False Positive Rate')\n",
+    "    plt.ylabel('True Positive Rate')\n",
+    "    plt.title('Receiver Operating Characteristic (ROC) Curve')\n",
+    "    plt.legend(loc=\"lower right\")\n",
+    "    plt.show()\n",
+    "\n",
+    "    # Generate confusion matrix\n",
+    "    conf_matrix = confusion_matrix(y_test, y_pred)\n",
+    "\n",
+    "    # Plot confusion matrix\n",
+    "    plt.figure(figsize=(8, 6))\n",
+    "    sns.heatmap(conf_matrix, annot=True, cmap='Blues', fmt='d')\n",
+    "    plt.xlabel('Predicted label')\n",
+    "    plt.ylabel('True label')\n",
+    "    plt.title('Confusion Matrix')\n",
+    "    plt.xticks([0.5, 1.5], ['Ham', 'Spam'])  # Specify the labels for binary classification\n",
+    "    plt.yticks([0.5, 1.5], ['Ham', 'Spam'])  # Specify the labels for binary classification\n",
+    "    plt.show()\n",
     "\n",
     "print(\"==================================\")\n",
     "print(\"SVC: tokenized dataset:\")\n",
