Add SVC model probability=True

--- a/code/SML_Project.ipynb
+++ b/code/SML_Project.ipynb
@@ -367,13 +367,13 @@
     "\n",
     "print(\"==================================\")\n",
     "print(\"SVC: tokenized dataset:\")\n",
-    "workflow(SVC(), param_dist_svc, X_train, y_train, X_val, y_val, X_test, y_test)\n",
+    "workflow(SVC(probability=True), param_dist_svc, X_train, y_train, X_val, y_val, X_test, y_test)\n",
     "print(\"==================================\")\n",
     "print(\"SVC: PCA processed dataset:\")\n",
-    "workflow(SVC(), param_dist_svc, X_train_pca, y_train_pca, X_val_pca, y_val_pca, X_test_pca, y_test_pca)\n",
+    "workflow(SVC(probability=True), param_dist_svc, X_train_pca, y_train_pca, X_val_pca, y_val_pca, X_test_pca, y_test_pca)\n",
     "print(\"==================================\")\n",
     "print(\"SVC: PCA processed hard ham dataset:\")\n",
-    "workflow(SVC(), param_dist_svc, X_train_hard_ham_pca, y_train_hard_ham_pca, X_val_hard_ham_pca, y_val_hard_ham_pca, X_test_hard_ham_pca, y_test_hard_ham_pca)\n",
+    "workflow(SVC(probability=True), param_dist_svc, X_train_hard_ham_pca, y_train_hard_ham_pca, X_val_hard_ham_pca, y_val_hard_ham_pca, X_test_hard_ham_pca, y_test_hard_ham_pca)\n",
     "\n",
     "# Random Forest\n",
     "param_dist_rf = {\n",
